--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -118,7 +118,6 @@ allow 109.70.100.71;
 allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
-allow 114.172.205.8;
 allow 114.35.245.150;
 allow 118.193.64.139;
 allow 121.78.28.166;
@@ -168,6 +167,7 @@ allow 162.210.173.17;
 allow 162.210.173.3;
 allow 162.210.173.5;
 allow 162.210.173.6;
+allow 162.216.18.62;
 allow 162.220.14.54;
 allow 162.220.14.78;
 allow 162.251.5.152;
@@ -289,6 +289,7 @@ allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
+allow 185.183.192.147;
 allow 185.191.204.254;
 allow 185.191.239.172;
 allow 185.191.239.49;
@@ -915,7 +916,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -923,13 +923,10 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.28;
+allow 23.191.200.27;
 allow 23.191.200.29;
-allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -956,6 +953,7 @@ allow 2.58.56.93;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
+allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
@@ -1480,7 +1478,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 allow 2a0e:97c0:3e3:460:1337:b02b:1337:3;
-allow 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 allow 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 allow 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 allow 2a0e:97c0:3e3:460:1337:b20b:1337:9;
@@ -1489,7 +1486,6 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1625,7 +1621,6 @@ allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
-allow 45.13.225.69;
 allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.137.70.158;
@@ -1741,7 +1736,6 @@ allow 46.246.92.34;
 allow 46.250.243.29;
 allow 46.253.4.208;
 allow 46.38.243.210;
-allow 46.8.43.110;
 allow 5.101.82.22;
 allow 5.104.84.183;
 allow 5.104.86.6;
@@ -1895,7 +1889,6 @@ allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.88.75.35;
-allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
