--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -124,6 +124,7 @@ deny 2407:3641:2259:8208::1;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
+deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
@@ -647,7 +648,6 @@ deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 deny 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 deny 2a0e:97c0:3e3:460:1337:b02b:1337:3;
-deny 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 deny 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 deny 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 deny 2a0e:97c0:3e3:460:1337:b20b:1337:9;
@@ -656,7 +656,6 @@ deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
-deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
